// This proto contains gRPC definition for chain_x service
syntax = "proto3";

package chain_3;

option go_package = "github.com/hanapedia/microservice-topologies/chain/chain_3/pb_chain_3";

service Chain_3 {
  rpc GetIds(Req) returns (Res); 
  }

message Res {
    repeated int32 ids = 1;
  }

message Req {
    repeated int32 ids = 1;
  }

